<resources>
    <string name="app_name">LuckyDollar</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_reviews">Reviews</string>
    <string name="article1">Article 1. User account password security</string>
    <string name="clause1">\t\tCEFC and any agents or CEFC and any agents or CEFC and any agents or CEFC and any agents or CEFC and any agents or CEFC and any agents or CEFC and any agents or CEFC and any agents or CEFC and any agents or CEFC and any agents or  </string>
    <string name="article2">Article 2. Indiana rules </string>
    <string name="clause2">\t\tCEFC and any agents or CEFC and any agents or CEFC and any agents or CEFC and any agents or CEFC and any agents or CEFC and any agents or CEFC and any agents or CEFC and any agents or CEFC and any agents or CEFC and any agents or CEFC and any agents or CEFC and any agents or </string>
    <string name="question1">How to partocopate in Indiana?</string>
    <string name="question2">Indiana is how to calculate the lucky number?</string>
    <string name="question3">Is the product genuine? How to guarantee?</string>
    <string name="question4">Receive the goods can return?</string>
    <string name="answer1">\t\tand any agents or contractors and any agents or contractors and any agents or contractors and any agents or contractors and any agents or contractors </string>
</resources>
